# platform

./: README.md
mobile/: README.md  app.js  app.json  index.js  package-lock.json  package.json  stores.js  styles.js  utilities.js
mobile/android/: release-android.sh  settings.gradle
mobile/android/app/: build.gradle
mobile/components/: r_config.js  r_home.js  r_login.js  r_logs.js  w_menu.js
mobile/ios/: Podfile
mobile/ios/pda/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
mobile/ios/pda.xcodeproj/: project.pbxproj
mobile/ios/pdaTests/: pdaTests.m
server/: .gitignore  Cargo.toml  README.md  TODO.md  config.toml
server/lib_canvas/: Cargo.toml  README.md
server/lib_canvas/src/: constants.rs  lib.rs  template.rs
server/lib_fonts_checker/: Cargo.toml
server/lib_fonts_checker/src/: main.rs
server/lib_server/: Cargo.toml  README.md
server/lib_server/src/: constants.rs  main.rs  route_associates.rs  route_auth.rs  route_bases.rs  route_groups.rs  route_items.rs  route_labels.rs  route_logs.rs  route_tasks.rs  route_templates.rs  route_users.rs  service_data.rs  struct_auth.rs  struct_config.rs  struct_db.rs  struct_group.rs  struct_label.rs  struct_response.rs  struct_server.rs  struct_task.rs  struct_user.rs
server/lib_test/: Cargo.toml
server/lib_utilities/: Cargo.toml
server/lib_utilities/src/: hash.rs  image.rs  lib.rs  random.rs  time.rs  validate.rs
server/lib_vendors/: Cargo.toml  README.md
server/nginx/: default  fullchain.pem  privkey.pem
server/scripts/: na0.fonts.sh  na0.server.sh  na0.ui.sh
ui/: .gitignore  README.md  babel.config.js  package.json  webpack.config.js
ui-designer/: README.md  index.js  index.less  package.json  webpack.config.js
ui-designer/src/: constants.js  edit_barcode.js  edit_circle.js  edit_circles.js  edit_image.js  edit_qrcode.js  edit_rect.js  edit_star.js  edit_stars.js  edit_text.js  element_circle.js  element_circles.js  element_image.js  element_rect.js  element_star.js  element_stars.js  element_text.js  utilities.js
ui/src/: index.html  index.js  index.less  langs.json  services.js  utilities.js
(+73 files in other folders)
